# btc-eth-dual-quant

./: .gitignore  AGENTS.md  Makefile  NEXT_ACTION.md  PROJECT_EXECUTION_CHECKLIST.md  PROJECT_LEDGER.md  PROJECT_STATE.yaml  README.md  STRATEGY_TRIAL_LEDGER.yaml  THIRD_PARTY_NOTICES.md  data_registry.yaml  pyproject.toml
config/: adr0016_existing_strategy_route_v1.json  adr0016_pre_runtime_contract_freeze_v1.json  adr0017_current_route_selection_runtime_v1.json  adr0018_scheduled_market_cessation_forced_exit_v1.json  external_strategy_benchmark_v1.json  external_strategy_candidate_freeze_v1.json  external_strategy_data_authority_v1.json  external_strategy_dsr_reference_trials_v1.json  external_strategy_inventory_v1.json  external_strategy_oos_guard_v1.json  external_strategy_original_is_authority_v1.json  external_strategy_unified_is_protocol_v1.json  liquid_spot_asset_eligibility_v2.json  liquid_spot_confirmed_archive_gaps_v2.json  liquid_spot_invalid_interval_policy_v1.json  liquid_spot_lifecycle_event_resolutions_v4.json  liquid_spot_lifecycle_policy_v4.json  liquid_spot_source_conflict_resolutions_v3.json  liquid_spot_universe_contract.json  liquid_spot_universe_contract_v2.json  liquid_spot_universe_contract_v3.json  liquid_spot_universe_contract_v4.json  liquid_universe_v4_adr0015_independent_audit_protocol.json  liquid_universe_v4_adr0015_independent_auditor_implementation.json  liquid_universe_v4_independent_audit_protocol.json  liquid_universe_v4_invalid_interval_adjudication_protocol.json  liquid_universe_v4_repair_requalification_protocol.json  (+100 more)
(+1490 files in other folders)
