[project]
name = "btc-eth-dual-quant"
version = "0.1.0"
description = "Freqtrade-first BTC/ETH research system with independent read-only data and event-time audit layers."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "duckdb>=1.0",
  "pandas>=2.0",
  "PyYAML>=6.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
